DeathStarBench_others/socialNetwork/k8s-yaml/post-storage-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: post-storage-service
  labels:
    death-star-project: social-network
    app-name: post-storage-service
  namespace: social-network
spec:
  ports:
  - port: 9090
    name: tcp
  selector:
    death-star-project: social-network
    app-name: post-storage-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
  name: post-storage-service
  labels:
    death-star-project: social-network
    app-name: post-storage-service
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: post-storage-service
  template:
    metadata:
      annotations:
        io.cilium.proxy-visibility: "<Egress/9090/TCP/HTTP>,<Egress/6379/TCP/REDIS>,<Egress/11211/TCP/MEMCACHED>,<Egress/27107/TCP/MONGODB>,<Egress/5672/TCP/RABBITMQ>,<Ingress/9090/TCP/HTTP>,<Ingress/6379/TCP/REDIS>,<Ingress/11211/TCP/MEMCACHED>,<Ingress/27017/TCP/MONGODB>,<Ingress/5672/TCP/RABBITMQ>"

      labels: 
        death-star-project: social-network
        app-name: post-storage-service
        OUTPUT1: post-storage-memcached
        OUTPUT2: post-storage-mongodb
        INPUT1: compose-post-service
        INPUT2: home-timeline-service
        INPUT3: user-timeline-service
      name: post-storage-service
    spec:
      containers:
      - name: post-storage-service
        image: poanpan/social-network-microservices-local-jaeger:v0.0.1
        command: ["PostStorageService"]
        ports: 
        - containerPort: 9090
        resources: 
          requests: 
            cpu: "600m"
            memory: "50Mi"
      restartPolicy: Always
      # nodeName: 10.0.0.13
      # schedulerName: poseidon
