DeathStarBench_others/socialNetwork/k8s-yaml/social-graph-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: social-graph-service
  labels:
    death-star-project: social-network
    app-name: social-graph-service
  namespace: social-network
spec:
  ports:
  - port: 9090
    name: tcp
  selector:
    death-star-project: social-network
    app-name: social-graph-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
  name: social-graph-service
  labels:
    death-star-project: social-network
    app-name: social-graph-service
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: social-graph-service
  template:
    metadata:
      annotations:
        io.cilium.proxy-visibility: "<Egress/9090/TCP/HTTP>,<Egress/6379/TCP/REDIS>,<Egress/11211/TCP/MEMCACHED>,<Egress/27107/TCP/MONGODB>,<Egress/5672/TCP/RABBITMQ>,<Ingress/9090/TCP/HTTP>,<Ingress/6379/TCP/REDIS>,<Ingress/11211/TCP/MEMCACHED>,<Ingress/27017/TCP/MONGODB>,<Ingress/5672/TCP/RABBITMQ>"

      labels: 
        death-star-project: social-network
        app-name: social-graph-service
        OUTPUT1: user-service
        OUTPUT2: home-timeline-redis
        OUTPUT3: social-graph-redis
        OUTPUT4: social-graph-mongodb
        INPUT1: nginx-thrift
        INPUT2: user-service
        INPUT3: write-home-timeline-service
      name: social-graph-service
    spec:
      containers:
      - name: social-graph-service
        image: poanpan/social-network-microservices-local-jaeger:v0.0.1
        command: ["SocialGraphService"]
        resources: 
          requests: 
            cpu: "600m"
            memory: "400Mi"
      restartPolicy: Always
      # nodeName: 10.0.0.13
      # schedulerName: poseidon
