DeathStarBench_others/socialNetwork/k8s-yaml/text-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: text-service
  labels:
    death-star-project: social-network
    app-name: text-service
  namespace: social-network
spec:
  ports:
  - port: 9090
    name: tcp
  selector:
    death-star-project: social-network
    app-name: text-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
  name: text-service
  labels:
    death-star-project: social-network
    app-name: text-service
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: text-service
  template:
    metadata:
      annotations:
        io.cilium.proxy-visibility: "<Egress/9090/TCP/HTTP>,<Egress/6379/TCP/REDIS>,<Egress/11211/TCP/MEMCACHED>,<Egress/27107/TCP/MONGODB>,<Egress/5672/TCP/RABBITMQ>,<Ingress/9090/TCP/HTTP>,<Ingress/6379/TCP/REDIS>,<Ingress/11211/TCP/MEMCACHED>,<Ingress/27017/TCP/MONGODB>,<Ingress/5672/TCP/RABBITMQ>"

      labels: 
        death-star-project: social-network
        app-name: text-service
        OUTPUT1: url-shorten-service
        OUTPUT2: user-mention-service
        OUTPUT3: compose-post-service
        INPUT: nginx-thrift
      name: text-service
    spec:
      containers:
      - name: text-service
        image: poanpan/social-network-microservices-local-jaeger:v0.0.1
        command: ["TextService"]
        resources: 
          requests: 
            cpu: "600m"
      restartPolicy: Always
      # nodeName: 10.0.0.13
      # schedulerName: poseidon
