DeathStarBench_others/socialNetwork/k8s-yaml/write-home-timeline-rabbitmq.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: write-home-timeline-rabbitmq
  labels:
    death-star-project: social-network
    app-name: write-home-timeline-rabbitmq
  namespace: social-network
spec:
  ports:
  - port: 4369
    name: tcp-1
  - port: 5671
    name: tcp-2
  - port: 5672
    name: tcp-3
  - port: 25672
    name: tcp-4
  selector:
    death-star-project: social-network
    app-name: write-home-timeline-rabbitmq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
  name: write-home-timeline-rabbitmq
  labels:
    death-star-project: social-network
    app-name: write-home-timeline-rabbitmq
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: write-home-timeline-rabbitmq
  template:
    metadata:
      annotations:
        io.cilium.proxy-visibility: "<Egress/9090/TCP/HTTP>,<Egress/6379/TCP/REDIS>,<Egress/11211/TCP/MEMCACHED>,<Egress/27107/TCP/MONGODB>,<Egress/5672/TCP/RABBITMQ>,<Ingress/9090/TCP/HTTP>,<Ingress/6379/TCP/REDIS>,<Ingress/11211/TCP/MEMCACHED>,<Ingress/27017/TCP/MONGODB>,<Ingress/5672/TCP/RABBITMQ>"

      labels: 
        death-star-project: social-network
        app-name: write-home-timeline-rabbitmq
        OUTPUT: write-home-timeline-service
        INPUT: compose-post-service
      name: write-home-timeline-rabbitmq
    spec:
      containers:
      - name: write-home-timeline-rabbitmq
        image: poanpan/rabbitmq:v1
        resources: 
          requests: 
            cpu: "600m"
            memory: "400Mi"
      restartPolicy: Always
      # nodeName: 10.0.0.13
      # schedulerName: poseidon
