DeathStarBench_others/socialNetwork/k8s-yaml/sn-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-thrift
  namespace: social-network
spec:
  rules:
  - host: sn-nginx.test.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-thrift
          servicePort: 8080
